testsuite/tests/parser/should_fail/Or2.stderr

Or2.hs:6:4: error: [GHC-96152]
    An or-pattern needs at least two alternatives: one of 4

Or2.hs:9:7: error: [GHC-58481] parse error on input ‘of’
